# powerplantmatching

./: .codespell.ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Changelog.md  Example of Use.ipynb  Hydro aggregation.py  MANIFEST.in  NL_plants_comparison.xlsx  README.md  REUSE.toml  __init__.py  cleaning.py  collection.py  config.py  config_example.csv  config_example.yaml  data  data.py  duke.py  duplicates.txt  example.py  export.py  heuristics.py  matched_data.csv  matched_data_red.csv  matching.py  mkdocs.yaml  nul  opsd_links.csv  osm-changeset-amer.md  osm-changeset-hemweg.md  osm-changeset-maasstroom.md  osm-changeset-rijnmond.md  powerplant_collection.py  powerplants.csv  pyproject.toml  pyrightconfig.json  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml
.github/workflows/: CI.yml  codeql.yml  deploy.yml  pythonapp.yml  release.yml  test.yml  type-checking.yml
analysis/: 1_osm_basics.py  2_osm_cache_and_quality.py  3_osm_regional_and_features.py  4_osm_rejection_analysis.py  compare-with-entsoe-stats.py  danish-powerplants.py  german-powerplants.py  interactive-map-with-widgets.py  interactive-map.py  osm_coverage.py  osm_example.py  osm_example_ppm.py  osm_reconstruction.py  osm_regional_download.py  run_osm_pipeline.py  update_powerplants.py
data/: Comparison.xml  Deleteduplicates.xml  FiasHydro.csv  Matched_Carma_Entsoe_Ese_Geo_Opsd_Wri.csv  Matched_Carma_Entsoe_Ese_Geo_Opsd_Wri_reduced.csv  Matched_Carma_Entsoe_Geo_Opsd.csv  Matched_Carma_Entsoe_Geo_Opsd_Wri.csv  Matched_Carma_Entsoe_Geo_Opsd_Wri_reduced.csv  Matched_Carma_Entsoe_Geo_Opsd_reduced.csv  Matched_Carma_Ese_Oldenburg_Geo_Opsd_Wri.csv  Matched_Carma_Ese_Oldenburg_Geo_Opsd_Wri_reduced.csv  Matched_Carma_Fias_Geo_Opsd_Wri.csv  Matched_Carma_Geo_Opsd_Wri.csv  Matched_Carma_Geo_Opsd_Wri_reduced_backup.csv  WRI_GEO_Carma_matched.csv  WRIdata.csv  additional_data_config  aggregated_capacity.csv  aggregation_groups_CARMA.csv  aggregation_groups_ENTSOE.csv  aggregation_groups_GEO.csv  aggregation_groups_OPSD.csv  aggregation_groups_WRI.csv  areamap  carma_fias_geo_wri_match.csv  coal-types.csv  conventional_power_plants_DE.csv  conventional_power_plants_EU.csv  energy_storage_exchange.csv  entsoe_powerplants.csv  hydro_aggregation.csv  hydro_aggregation_beta.csv  manual_corrections.csv  parsed_locations.csv  parsed_locations_old.csv
data/in/: Full_CARMA_2009_Dataset_1.csv  IRENA_CapacityStatistics2017.csv  PLZ_Coords_map.csv  WRIdata.csv  aggregated_capacity.csv  aggregation_groups_BNETZA.csv  aggregation_groups_UBA.csv  conventional_power_plants_DE.csv  conventional_power_plants_EU.csv  entsoe-areamap.csv  entsoe_factsheet.csv  entsoe_powerplants.csv  global_energy_observatory_power_plants.sqlite  global_power_plant_database.csv  hydro_aggregation_beta.csv  manual_corrections.csv  national_generation_capacity_stacked.csv
doc/: api-plot.rst  basics.rst  conf.py  contributing.rst  custom-config.rst  example.ipynb  getting-started.rst  index.rst  osm-data-analysis.rst  osm-module.rst  release-notes.rst  support.rst
doc/_static/: osm_analysis_complete_report.txt  osm_ppm_eu_analysis.py
docs/: api-core.md  api-core.rst  api-data.md  api-data.rst  api-utils.md  api-utils.rst  basics.md  citing.md  contributing.md  contributors.md  custom-config.md  faq.md  getting-started.md  getting-started.rst  index.md  index.rst  installation.md  license.md  release-notes.md  release-notes.rst  support.md  troubleshooting.md
docs/examples/: example.ipynb
example/: example.py
gas_powerplant_updaing/: Gas_Power_Plant_Updating.ipynb  build_entsoe_web_data.py
gas_powerplant_updaing/data/entsoe_data/: DEDE_AT_LU.csv  DEDE_LU.csv  FIFI.csv  GBGB_1.csv  GRGR.csv  HUHU.csv  ITIT_BRNN.csv  ITIT_CNOR.csv  ITIT_SICI.csv  ITIT_SUD.csv  LTLT.csv  LUDE_AT_LU.csv  LVLV.csv  MDMD.csv  MEME.csv  MKMK.csv  NONO_2.csv  NONO_3.csv  NONO_4.csv  NONO_5.csv  PLPL.csv  PTPT.csv  RORO.csv  SESE_2.csv  SESE_3.csv  SISI.csv  SKSK.csv  UAUA_IPS.csv
gas_powerplant_updaing/data/global_power_plant_database_v_1_3/: README.txt  RELEASE_NOTES.txt
gas_powerplant_updaing/output/: ENTSOE_Web_database_gas_powerplant.csv
gas_powerplant_updaing/test/: ATDE_AT_LU.csv  CZCZ.csv  EEEE.csv  FRFR.csv
matching_analysis/: Hydro aggregation.py  agg_caps_per_sources.py  compare-with-entsoe-stats.py  danish-powerplants.py  german-powerplants.py  interactive-map.py  interactive_map.py  plots.py  uba_bnetza_matching.py  uba_bnetza_matching_cap_totals.py  update-matches.py  update_all_matches.py  update_powerplants.py
output/: Matched_Carma_Entsoe_Geo_Opsd_reduced.csv
powerplantmatching/: Build_nuclear_wiki_data.py  __init__.py  accessor.py  analysis.py  build_nuclear_wiki_data.py  cleaning.py  collection.py  config.py  core.py  data.py  duke.py  example.py  export.py  heuristics.py  matching.py  new_nuclear_data.csv  osm.py  plot.py  utils.py
powerplantmatching/osm/: __init__.py  cache.py  client.py  clustering.py  coverage.py  element_processor.py  estimation.py  extractor.py  generator_parser.py  geometry.py  interface.py  models.py  plant_parser.py  populate.py  processors.py  reconstruction.py  regional.py  rejection.py  unit_factory.py  utils.py  workflow.py
powerplantmatching/osm/enhancement/: __init__.py  clustering.py  estimation.py  geometry.py  reconstruction.py
powerplantmatching/osm/parsing/: __init__.py  base.py  capacity.py  factory.py  generators.py  plants.py
powerplantmatching/osm/quality/: __init__.py  coverage.py  rejection.py
powerplantmatching/osm/retrieval/: __init__.py  cache.py  client.py  populate.py  (+1 more)
powerplantmatching/package_data/: Comparison.xml  Deleteduplicates.xml  PLZ_Coords_map.csv  config.yaml  country_codes.csv  entsoe_country_codes.csv  france.csv  manual_corrections.csv  manual_corrections_old.csv  new_powerplant_checked.csv  new_powerplant_checked.xls  parsed_locations.csv
test/: test_aggregate.py  test_cleaning.py  test_data.py  test_duke.py  test_matching.py  test_plots.py
