# SPDX-FileContributor: The powerplantmatching contributors
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name="powerplantmatching"
dynamic = ["version"]
description="Toolset for generating and managing Power Plant Data"
readme="README.md"
authors = [{ name = "Fabian Hofmann (FIAS)", email = "fabianmarikhofmann@gmail.com" },
{ name = "Jonas Hoersch (KIT)" },
{ name = "Fabian Gotzens (FZ Jülich)" }]
license = { file = "LICENSE" }
classifiers=[
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "pandas>=0.24.0",
    "networkx>=1.10",
    "pycountry",
    "country_converter",
    "xlrd",
    "seaborn",
    "pyyaml >=5.1.0",
    "requests",
    "matplotlib",
    "geopy",
    "xlrd",
    "unidecode",
    "entsoe-py >=0.3.1",
    "deprecation",
    "tqdm",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/PyPSA/powerplantmatching"
Source = "https://github.com/PyPSA/powerplantmatching"

[project.optional-dependencies]
docs= [
    "numpydoc",
    "sphinx",
    "sphinx-book-theme",
    "nbsphinx",
    "sphinx-automodapi",
]
dev= [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",
    "types-tqdm",
    "types-six",
    "reuse>=5.0.2",
]

# Add optional dependencies for plotting
plotting= [
    "cartopy"
]

 # setuptools_scm settings

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["powerplantmatching"]

# Pytest settings

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning", # Raise all DeprecationWarnings as errors
    "error::FutureWarning",      # Raise all FutureWarnings as errors
]

# Formatter and linter settings

[tool.ruff]
extend-include = ['*.ipynb']

[tool.ruff.lint]
select = [
    'F',   # pyflakes
    # 'E',   # pycodestyle: Error
    # 'W',   # pycodestyle: Warning
    'I',   # isort
    # 'D',   # pydocstyle
    'UP',  # pyupgrade
    'TID', # flake8-tidy-imports
    'NPY', # numpy
]

# Add basic mypy configuration
[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Ignore class-level imports in accessor.py
disable_error_code = ["misc"]

# Ignore missing imports for external libraries
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "networkx.*",
    "pycountry.*",
    "country_converter.*",
    "geopy.*",
    "unidecode.*",
    "entsoe.*",
    "yaml.*",
    "scipy.*",
    "pandas.*",
    "tqdm.*",
    "deprecation.*",
    "cartopy.*",
    "six.*",
]
ignore_missing_imports = true
